--- a/package.json
+++ b/package.json
@@ -5,5 +5,22 @@
   "main": "index.ts",
   "author": "Artur Wdowiarski",
   "license": "MIT",
-  "private": null
+  "private": false,
+  "dependencies": {
+    "@ceramicnetwork/cli": "^2.0.2",
+    "@ceramicnetwork/http-client": "^2.0.0",
+    "@glazed/datamodel": "^0.3.0",
+    "@glazed/did-datastore": "^0.3.0",
+    "@glazed/types": "^0.2.0",
+    "dids": "^3.0.0",
+    "key-did-provider-ed25519": "^2.0.0",
+    "key-did-resolver": "^2.0.0",
+    "typescript": "^4.6.3",
+    "uint8arrays": "^3.0.0"
+  },
+  "devDependencies": {
+    "@glazed/devtools": "^0.2.0",
+    "@types/node": "^17.0.29",
+    "ts-node": "^10.7.0"
+  }
 }
